--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .full{
     width: 100%;
     height: 100% !important;
-    background-color: #FCAEAE !important;
+    background-color: #d1caca !important;
 }
 .sticky-top{
     background-color: rgb(21, 21, 20) !important;
@@ -70,7 +70,37 @@
 .j{
     margin-top:30px ;
 }
-@media screen and (max-width:830px) {
+.secu{
+    display: flex;
+    width: 90%;
+    margin: 0 auto 0 auto;
+    margin-top: 30px;
+    
+}
+.con{
+    margin-top: 25px;
+    display: flex;
+}
+.col-1{
+   
+    width: 45px;
+    height: 45px;
+ }
+ .cc{
+    margin-left: 10px;
+ }
+.col-2{
+        width: 190px;
+        margin-left: 10px;
+}
+.TO{
+    width: 220px;
+}
+#po{
+    width: 45px;
+    height: 45px;
+}
+@media screen and(max-width:1199px) {
     .ban{
         display: flex;
         flex-wrap: wrap;
@@ -80,7 +110,7 @@
 
     }
     #one{
-        width: 800px;
+        width: 820px;
         height: 220px;
     }
     .two{
@@ -101,5 +131,19 @@
     .j{
         margin-top: 0;
     }
-
+    .secu{
+        margin-left: 0;
+        display: inline-block;
+    }
+    .gap{
+        height: 90px;
+    }
+    .cc{
+        margin-left: 0%;
+    }
+}
+@media screen and(max-width:320px ) {
+    .gap{
+        display: none;
+    }
 }
