--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@
     width: 45px;
     height: 45px;
 }
-@media screen and(max-width:1199px) {
+@media screen and (max-width:1199px) {
     .ban{
         display: flex;
         flex-wrap: wrap;
@@ -132,18 +132,15 @@
         margin-top: 0;
     }
     .secu{
+        background-color: azure;
         margin-left: 0;
         display: inline-block;
+        width: 100%;
     }
     .gap{
-        height: 90px;
+        height: 50px;
     }
     .cc{
         margin-left: 0%;
-    }
-}
-@media screen and(max-width:320px ) {
-    .gap{
-        display: none;
     }
 }
