--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .full{
     width: 100%;
     height: 100% !important;
-    background-color: #d1caca !important;
+    background-color: #FEFCF3 !important;
 }
 .sticky-top{
     background-color: rgb(21, 21, 20) !important;
@@ -109,6 +109,34 @@
     width: 100%;
     background-color: aliceblue;
 }
+.back{
+    background-image: url(img/cc.webp);
+    background-repeat: no-repeat;
+    height: 600px;
+    width: 240px;
+}
+.shop{
+    display:flex ;
+}
+#a{
+    padding-top: 60.5px !important;
+}
+.card{
+    width: 22%;
+    margin-left: 28px;
+    margin-top: 21.5px;
+    height: 450px;
+}
+.card-img-top{
+    width: auto;
+    height: 300px;
+}
+.checked{
+    color: orange;
+}
+.ml{
+    right: 10px;
+}
 @media screen and (max-width:1199px) {
     .ban{
         display: flex;
@@ -152,6 +180,24 @@
 
     .cc{
         margin-left: 0%;
+    }
+    .back{
+        display: none;
+    }
+    .shop{
+        flex-wrap: wrap;
+    }
+    .card{
+        width: auto;
+    }
+}
+@media screen and (max-width: 860px) and (min-width: 320px){
+    .card{
+        width: 90%;
+        margin-left: 20px;
+    }
+    .ml{
+        margin-left: 30px;
     }
 }
 @media screen and (max-width: 1199px) and (min-width: 600px) {
