--- a/index.css
+++ b/index.css
@@ -121,7 +121,7 @@
     height: 500px;
 }
 #a{
-    padding-top: 60.5px !important;
+    padding-top: 60.5px;
 }
 .pro{
     width: 22%;
@@ -172,6 +172,62 @@ background-color: rgb(215, 170, 22);
     display: flex;
     margin-left: 30px;
 }
+/*for top seling*/
+.front{
+    background-image: url(img/e1.webp);
+    background-repeat: no-repeat;
+    height: 500px;
+    width: 240px;
+}
+#entert{
+    width: 65%;
+    height: 200px;
+    margin: 110px 0 0 18%;
+}
+.new{
+    display: flex;
+}
+.foter{
+    margin-top: 70px;
+    width: 100%;
+}
+#foter{
+    width: 100%;
+}
+.fot{
+    
+    height: 60px;
+}
+#fot{
+    padding-top: 100px;
+    padding-left:44% ;
+}
+footer{
+    margin-top: 120px;
+    display: flex;
+    justify-content: space-around;
+    height: 200px;
+
+}
+a{
+    padding-top: 15px;
+    text-decoration: none;
+    color: black;
+}
+.f{
+    margin-left: 5%;
+    width: 20%;
+
+}
+.ff{width: 20%;
+}
+.fff{
+    width: 20%;
+}
+.ffff{
+    width: 20%;
+}
+
 @media screen and (max-width:1199px) {
     .ban{
         display: flex;
@@ -212,6 +268,7 @@ background-color: rgb(215, 170, 22);
         display: inline-block;
         width: 100%;
     }
+    .nro{margin-left: 18px;}
 
     .cc{
         margin-left: 0%;
@@ -241,6 +298,39 @@ background-color: rgb(215, 170, 22);
     .noob{
         width: 95%;
     }
+    .entert{
+        
+        margin-top: 390px;
+    }
+    .new{
+        flex-wrap: wrap;
+    }
+    footer{
+        flex-direction: column;
+        margin-top: 300px;
+        height: 400px;
+        margin-left: 0;   
+    }
+    .f{
+        width: 70%;
+        margin-left: 50px;
+    }
+    .ff{
+        width: 70%;
+        margin-left: 50px;
+        margin-top: 40px;
+
+    }
+    .fff{
+        width: 70%;
+        margin-left: 50px;
+        margin-top: 40px;
+    }
+    .ffff{
+        width: 70%;
+        margin-left: 50px;
+        margin-top: 40px;
+    }
 
 }
 @media screen and (max-width: 860px) and (min-width: 320px){
@@ -266,8 +356,17 @@ background-color: rgb(215, 170, 22);
         padding-left: 40px;
     }
     .pl{
-        padding-left:20px ;
+        margin-left:20px ;
     }
+    /*for top selling*/
+    .entert{
+        display: none;
+        
+    }
+    #new{
+        padding-top: 950px;
+    }
+    
 }
 @media screen and (max-width: 1199px) and (min-width: 600px) {
     .gap{
